# Bot-Trader-Capstone-2024

./: .gitignore  README.md  createBot.m  createPosition.m  executeBot.m
TWS API/: API_VersionNum.txt  CMakeLists.txt  CapstoneAPI.m  MatlabInterface.cpp  gitCommitSha1Checksum.txt  readTradeRecords.m
TWS API/samples/CSharp/IBSampleApp/Properties/: AssemblyInfo.cs
TWS API/samples/CSharp/IBSampleApp/backend/: IBClient.cs
TWS API/samples/CSharp/IBSampleApp/messages/: OrderBoundMessage.cs  OrderStatusMessage.cs
TWS API/samples/CSharp/IBSampleApp/ui/: ContractManager.cs  IBSampleApp.Designer.cs  IBSampleApp.cs  IBSampleApp.resx  MarginDialog.Designer.cs  MarginDialog.cs  MarketDataManager.cs  OptionsManager.cs  OrderDialog.Designer.cs  OrderDialog.cs  OrderManager.cs
TWS API/samples/CSharp/IBSampleApp/util/: Utils.cs
TWS API/samples/CSharp/Testbed/: ContractSamples.cs  EWrapperImpl.cs  OrderSamples.cs  Program.cs
TWS API/samples/CSharp/Testbed/Properties/: AssemblyInfo.cs
TWS API/samples/Cpp/CapstoneCPP/: CMakeLists.txt  CapstoneCppClient.cpp  CapstoneCppClient.h  CapstoneIBClient.sln  ContractSamples.cpp  ContractSamples.h  ExecOutputs.csv  Main.cpp  Makefile.linux  OrderSamples.cpp  SharedData.h  StdAfx.h  TWSgui.cpp  TestCppClient.vcxproj  TestCppClientStatic.vcxproj  UserInterface.cpp  UserInterface.h  Utils.cpp  Utils.h  config.txt  message_queue.cpp  message_queue.h
TWS API/samples/Cpp/CapstoneIBClientStaticLibrary/: CapstoneCppClient.h  CapstoneIBClientStaticLibrary.vcxproj  ContractSamples.h  OrderSamples.h  StdAfx.h
TWS API/samples/Cpp/MatlabInterface/: MatlabInterface.cpp  MatlabInterface.vcxproj  MatlabInterface.vcxproj.filters
TWS API/samples/Cpp/TestCppClient/: CMakeLists.txt  ContractSamples.cpp  ContractSamples.h  Main.cpp  TestCppClient.cpp  TestCppClient.h  TestCppClient.vcxproj  TestCppClientStatic.vcxproj
TWS API/samples/DdeSocketBridge/src/main/java/com/ib/api/dde/: SocketDdeBridge.java  TwsService.java
TWS API/samples/DdeSocketBridge/src/main/java/com/ib/api/dde/handlers/: ExerciseOptionsHandler.java  MatchingSymbolsHandler.java  MiscHandler.java  OrdersHandler.java
TWS API/samples/DdeSocketBridge/src/main/java/com/ib/api/dde/main/: Main.java  MainFrame.java
TWS API/samples/DdeSocketBridge/src/main/java/com/ib/api/impl/: EWrapperImpl.java
TWS API/samples/Excel/: TwsActiveX.xls  TwsDde.xls  TwsRtdServer.xls  compile.vbs  decompile.vbs
TWS API/samples/Excel/TwsActiveX/: Account.cls  AcctUpdMulti.cls  AdvancedOrders.cls  Advisors.cls  Api.cls  BasicOrders.cls  BondContractDetails.cls  CompletedOrders.cls  ConditionalOrders.cls  ContractDetails.cls  Executions.cls  ExtendedOrderAttributes.cls  FamilyCodes.cls  General.cls  HeadTimestamp.cls  News.cls  OpenOrders.cls  OrderUtils.bas  Portfolio.cls  Tickers.cls  Util.bas
TWS API/samples/Excel/TwsDde/: AccountPortfolio.cls  AccountUpdatesMulti.cls  BasicOrders.cls  CompletedOrders.cls  ContractDetails.cls  Executions.cls  OpenOrders.cls  OrderFunctions.bas  Tickers.cls  util.bas
TWS API/samples/Java/TestJavaClient/: ConnectDlg.java  ExtOrdDlg.java  OrderDlg.java  SampleFrame.java
TWS API/samples/Java/apidemo/: ApiDemo.java  ComboPanel.java  CompletedOrdersPanel.java  ExercisePanel.java  OrdersPanel.java  Test.java  TicketDlg.java  TradesPanel.java
TWS API/samples/Java/apidemo/util/: IConnectionConfiguration.java
TWS API/samples/Java/samples/dnhedge/: SampleDNHedge.java
TWS API/samples/Java/samples/rfq/: SampleRfq.java  SimpleWrapper.java
TWS API/samples/Java/samples/testbed/: EWrapperImpl.java  Testbed.java
TWS API/samples/Java/samples/testbed/contracts/: ContractSamples.java
TWS API/samples/Java/samples/testbed/orders/: OrderSamples.java
TWS API/samples/Python/Testbed/: ContractSamples.py  OrderSamples.py  Program.py
TWS API/samples/VB/Testbed/: ContractSamples.vb  EWrapperImpl.vb  MainModule.vb  OrderSamples.vb  VB_Testbed.sln
TWS API/samples/VB/Testbed/My Project/: AssemblyInfo.vb
TWS API/samples/VB/VB_API_Sample/: ApiEventSource.vb  AssemblyInfo.vb  MainForm.vb  Tws.vb  Utils.vb  dlgAcctData.vb  dlgAdjustStop.Designer.vb  dlgCondition.vb  dlgConnect.vb  dlgOrder.vb  dlgOrderAttribs.vb
TWS API/samples/VB/VB_API_Sample/EventArgs/: OrderBoundEventArgs.vb  OrderStatusEventArgs.vb
TWS API/source/CSharpClient/TwsRtdServer/: TwsRtdServer.csproj  TwsRtdServerConnection.cs  TwsRtdServerData.cs  TwsRtdServerMktDataTicks.cs  TwsRtdServerTopic.cs  TwsRtdServerWrapper.cs
TWS API/source/CSharpClient/activex/: TWSLib.csproj
TWS API/source/CSharpClient/activex/ComWrappers/: ComContract.cs  ComContractDetails.cs  ComExecution.cs  ComExecutionFilter.cs  ComIneligibilityReason.cs  ComOrder.cs  comOrderCancel.cs
TWS API/source/CSharpClient/activex/ControlImpl/: IContract.cs  IContractDetails.cs  IExecution.cs  IIneligibilityReason.cs  IIneligibilityReasonList.cs  IOrder.cs  IOrderCancel.cs  ITws.cs  ITwsEvents.cs  Tws.cs
TWS API/source/CSharpClient/activex/Properties/: AssemblyInfo.cs
TWS API/source/CSharpClient/client/: .editorconfig  CSharpAPI.csproj  Constants.cs  DefaultEWrapper.cs  DepthMktDataDescription.cs  EClient.cs  EClientSocket.cs  EDecoder.cs  EOrderDecoder.cs  EWrapper.cs  Execution.cs  MinServerVer.cs  Order.cs  OrderCancel.cs  OrderCondition.cs  Util.cs
TWS API/source/CSharpClient/client/Properties/: AssemblyInfo.cs
TWS API/source/CppClient/: Intel_lib_build.txt
TWS API/source/CppClient/client/: CMakeLists.txt  CommonDefs.h  Contract.h  ContractCondition.cpp  Decimal.cpp  Decimal.h  DefaultEWrapper.cpp  EClient.cpp  EClient.h  EClientSocket.cpp  EClientSocket.h  EDecoder.cpp  EDecoder.h  EOrderDecoder.cpp  EOrderDecoder.h  EReader.cpp  EReader.h  EWrapper_prototypes.h  Execution.h  IneligibilityReason.h  Order.h  OrderCancel.h  TwsSocketClient.rc  TwsSocketClient.vcxproj  TwsSocketClient.vcxproj.filters  TwsSocketClientStatic.vcxproj  Utils.cpp  Utils.h  WshEventData.h
TWS API/source/pythonclient/ibapi/: __init__.py  client.py  decoder.py  execution.py  ibapi.pyproj  order.py  orderdecoder.py  server_versions.py  wrapper.py
(+31 files in other folders)
